Discover Alignment Fixed

--- a/src/App.css
+++ b/src/App.css
@@ -178,6 +178,7 @@
   padding-bottom: 0.5rem;
   color: gray;
   font-size: 16px;
+  text-align: center;
 }
 
 /*----------------- modules end---------------- */
